# ic3-ad-2024

SuperSecureVault/checker/: Dockerfile  checker_pb2.py  checker_pb2_grpc.py  docker-compose.yml  server.py
SuperSecureVault/checker/proto/: checker.proto
SuperSecureVault/src/: Dockerfile  docker-compose.yml  go.mod  go.sum  keys.conf  main.go
SuperSecureVault/src/controllers/: authControllers.go  inventoryControllers.go  pageControllers.go  secureInventoryControllers.go
SuperSecureVault/src/models/: accounts.go  authentication.go  db.go  inventory.go  secureinventory.go
SuperSecureVault/src/templates/: addItem.html  addSecureItem.html  error.html  getInventory.html  getfullInventory.html  home.html  index.html  login.html  register.html  token.html  viewSecureItem.html
SuperSecureVault/src/templates/styles/: backup.css  style.css
SuperSecureVault/src/utils/: Err.go  crypto.go  utils.go
fruitshop/checker/: .gitignore  Dockerfile  bi0stools.py  checker_test.sh  functions_order.json  gen.sh  pyproject.toml  server.py  verify.py
fruitshop/checker/proto/: checker.proto
fruitshop/deploy/ansible/: fruitshop.yaml
fruitshop/deploy/ansible/files/: cleanup.sh  fruitshop  fruitshop.service  market  (+2 more)
fruitshop/src/: .gitignore  cleanup.sh  fruitshop.c  generate.py  market.c  shop
fruitshop/src/assets/: nsjail  nsjail.cfg
fruitshop/src/exploits/: exp1.py  exp2.py  exp3.py  patch.py
unfinished-game/: README.md
unfinished-game/checker/: Dockerfile  requirements.txt  server.py
unfinished-game/exploit/: exploit-full.c  exploit.c
unfinished-game/src/: game.c
