[project]
name = "checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpc-stubs>=1.53.0.5",
    "grpcio-tools>=1.66.2",
    "grpcio>=1.66.2",
    "hexdump>=3.3",
    "mypy-protobuf>=3.6.0",
    "protobuf==5.27.2",
    "pyright>=1.1.384",
    "ruff>=0.6.9",
    "types-protobuf>=5.28.0.20240924",
]
